--- a/index.html
+++ b/index.html
@@ -1,14 +1,5 @@
 ---
-title: Pineapple Blog
+layout: default
+title: Pineapple Blogsy
 ---
-  
-<!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>{{ page.title }}</title>
-  </head>
-  <body>
-    <h1>{{ "Hello World!" | downcase }}</h1>
-  </body>
-</html>
+<h1>{{ "Hello World!" | downcase }}</h1>
